<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    android:orientation="vertical"
    tools:background="@android:color/black"
    tools:context="id.credoapp.mobile.MainActivity">

    <include layout="@layout/toolbar"></include>
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/content"
    >
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="@dimen/padding_common">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/agree"   >
                <TextView
                    android:id="@+id/dataCollectionAgreementTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Content_DataCollectionAgreement"
                    android:textColor="@color/textColorPrimary"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:textSize="@dimen/font_size_title"
                    />
                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top_common">
                <TextView
                    android:id="@+id/confirmationMessage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Content_ConfirmationMessage"
                    android:textColor="@color/textColorPrimary"
                    android:textAlignment="inherit"
                    android:textSize="@dimen/font_size_content"/>
                </ScrollView>
            </LinearLayout>
            <Button
            android:id="@+id/agree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:onClick="goToCollect"
            android:text="@string/Content_Agree"
            android:textColor="@color/colorBlack"/>
    </RelativeLayout>
</FrameLayout>
</LinearLayout>
